fix shifting mobile table layout

--- a/src/pages/admin/card/CardTable.scss
+++ b/src/pages/admin/card/CardTable.scss
@@ -33,3 +33,10 @@
 	max-width: 100vw;
 	overflow: auto;
 }
+
+.table-container {
+	width: 100vw;
+	margin-left: -.8rem;
+	margin-right: -.8rem;
+	padding: 0 .8rem;
+}
